# VisitorModule_backend

./: .dockerignore  .env  .env.example  .gitignore  .zipignore  API_GATEWAY_SETUP_STEPS.md  AWS_CONSOLE_SETUP_GUIDE.md  BOTOCORE_DOCS_FIX.md  CLOUDSHELL_QUICK_GUIDE.md  COMPLETE_DEPENDENCY_VALIDATION.md  CREATE_LAYER_ON_WINDOWS.md  CREATE_LAYER_STEPS.md  CREATE_LAYER_WITHOUT_DOCKER.md  DEPLOY_TIMEOUT_FIX.md  Dockerfile  Dockerfile.layer  ELECTRONICS_S3_SETUP_COMPLETE.md  FIX_MISSING_DEPENDENCIES.md  LAMBDA_BUILD_GUIDE.md  LAMBDA_DEPLOYMENT_GUIDE.md  LAMBDA_TEST_GUIDE.md  LAYER_DEPLOYMENT_GUIDE.md  LAYER_VERIFICATION_STEPS.md  Makefile  PUSH_TO_GITHUB.md  QUICK_FIX_ASYNC.md  RENDER_DEPLOYMENT_GUIDE.md  REQUIREMENTS_REVIEW.md  REQUIREMENTS_VERIFIED.md  S3_DEPLOYMENT_GUIDE.md  SETUP_ON_NEW_MACHINE.md  TIMEOUT_FIX_GUIDE.md  TWILIO_SETUP_A2P_GUIDE.md  UPLOAD_LAYER_TO_S3.md  WHATSAPP_IMPLEMENTATION_SUMMARY.md  WHATSAPP_SETUP_GUIDE.md  add_electronics_columns.sql  build-complete-lambda-layer.bat  build-deploy.ps1  build-deployment-package.bat  (+61 more)
app/core/: config.py  (+2 more)
deployment-package/: debug_lambda_handler.py  lambda_handler.py  pyproject.toml
deployment-package/app/: main.py
deployment-package/charset_normalizer-3.4.4.dist-info/: RECORD
deployment-package/email_validator-2.3.0.dist-info/: RECORD
deployment-package/fastapi-0.121.3.dist-info/: RECORD
deployment-package/frozenlist-1.8.0.dist-info/: RECORD
deployment-package/greenlet-3.2.4.dist-info/: RECORD
deployment-package/httpx-0.28.1.dist-info/: RECORD
deployment-package/pypng-0.20220715.0.dist-info/: RECORD
(+45 files in other folders)
